--- a/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
@@ -17,43 +17,43 @@
                     
                     @if (Int32.Parse(@Model.FirstOrDefault().Hstars) == 5)
                     {
-                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred"></label>    
+                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred star"></label>    
                     }
                     else if (Int32.Parse(@Model.FirstOrDefault().Hstars) == 4)
                     {
-                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" ></label>
-                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred"></label>        
+                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred star"></label>        
                     }
                     else if (Int32.Parse(@Model.FirstOrDefault().Hstars) == 3)
                     {
-                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" ></label>
-                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2"  ></label>
-                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred"></label>        
+                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred star"></label>        
                     }
                     else if (Int32.Parse(@Model.FirstOrDefault().Hstars) == 2)
                     {
-                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" ></label>
-                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2"  ></label>
-                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3"  ></label>
-                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred"></label>
-                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred"></label>        
+                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="starred star"></label>
+                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred star"></label>        
                     }
                     else if (Int32.Parse(@Model.FirstOrDefault().Hstars) == 1)
                     {
-                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" ></label>
-                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2"  ></label>
-                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3"  ></label>
-                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4"  ></label>
-                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred"></label>        
+                        <input type="radio" name="radiobutton" id="star-1"/><label for="star-1" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-2"/><label for="star-2" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-3"/><label for="star-3" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="star"></label>
+                        <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred star"></label>        
                     }
                 </div>
         </div>
