--- a/DanicoSolution/DanicoProject/Content/css/jquery-ui.css
+++ b/DanicoSolution/DanicoProject/Content/css/jquery-ui.css
@@ -75,16 +75,16 @@
  * for informational purposes only and are not the license terms under
  * which Microsoft distributed this file.
  *
- * jQuery UI Autocomplete 1.8.7
+ * jQuery UI autocomplete2 1.8.7
  *
  * Copyright 2010, AUTHORS.txt (http://jqueryui.com/about)
  *
- * http://docs.jquery.com/UI/Autocomplete#theming
+ * http://docs.jquery.com/UI/autocomplete2#theming
  */
-.ui-autocomplete { position: absolute; cursor: default; }	
+.ui-autocomplete2 { position: absolute; cursor: default; }	
 
 /* workarounds */
-* html .ui-autocomplete { width:1px; } /* without this, the menu expands to 100% in IE6 */
+* html .ui-autocomplete2 { width:1px; } /* without this, the menu expands to 100% in IE6 */
 
 /*
  * Note: While Microsoft is not the author of this file, Microsoft is
