--- a/DanicoSolution/DanicoProject/Views/Shared/Error.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Shared/Error.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    Layout = null;
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <!DOCTYPE html>
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h2>
-        Sorry, an error occurred while processing your request.
+       Lo sentimos, la página que esta buscando no existe en este momento.
     </h2>
 </body>
 </html>
