--- a/DanicoSolution/DanicoProject/Content/css/cssTheme/style.css
+++ b/DanicoSolution/DanicoProject/Content/css/cssTheme/style.css
@@ -30,7 +30,7 @@ mark, rp, rt, ruby, summary, time{ display: inline }
 
 /* Global properties ======================================================== */
 body { 
-	font-family:Arial, Helvetica, sans-serif;
+	font-family:OptimaRegular,Arial, Helvetica, sans-serif;
 	font-size:100%; 
 }
 html, body { height:100%;}
@@ -48,10 +48,12 @@ html, body { height:100%;}
 /* #Typography
 ================================================== */
 	h1, h2, h3, h4, h5, h6 {
-		color: #000;
+	/*	color: #000; removed because it`s black*/
 		font-family: 'OptimaRegular';
 		font-weight: normal;
 		line-height:1.2em;
+		
+
 	}
 	h1 a, h2 a, h3 a, h4 a, h5 a, h6 a { font-weight: inherit; }
 	
@@ -78,8 +80,14 @@ html, body { height:100%;}
 		font-size:14px;
 		line-height:1.2em;
 		color:#d2d2d2;
-		font-weight:bold;
-		margin-bottom:9px;
+	/*	font-weight:bold;
+		margin-bottom:9px;*/
+		
+		
+		float:   left; 
+        width:   50%;
+        margin:  0px;
+        /*max-width: 400;  */
 	}
 	h4.map-description{
 		color:#ff6d1e;
@@ -1283,4 +1291,38 @@ nav.footer li a:hover, nav.footer li.current a{
 }
 
 
-	
+/***************************/
+
+.pDescripcion {
+        font-size:14px;
+		line-height:1.2em;
+		color:#d2d2d2;
+	/*	font-weight:bold;
+		margin-bottom:9px;*/
+		
+		
+		float:   left; 
+      
+        margin:  0px;
+        max-width: 50%; 
+}
+
+
+.pPromocion {
+        font-size:14px;
+	    line-height:1.2em;
+		color:#d2d2d2;
+	/*	font-weight:bold;
+		margin-bottom:9px;*/	
+		float:   left; 
+        margin:  0px;
+   
+}
+
+
+
+.iPromocion{
+	float:   right; 
+    margin-top:  15%;
+    vertical-align:bottom;
+}
