--- a/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
@@ -3,15 +3,50 @@
 @{
     ViewBag.Title = "Details";
 }
+@{var vbServices = (ViewBag.vbServices);}  
+@{var vbprice = (ViewBag.vbprice);}  
+@{var vbcapacity  = (ViewBag.vbcapacity);}  
+
+@{var vblat = (ViewBag.lat);}  
+@{var vblng = (ViewBag.lng);}  
 
 <!--
 
 <body id="portfolio">
 -->
-	
+@section section2
+{   
+    <script type="text/javascript"  src="http://maps.google.com/maps/api/js?sensor=false"></script> 
+    <link href="../../Content/css/MapStyle.css" rel="stylesheet" type="text/css" /> <!-- idea taken from http://www.codeproject.com/Articles/148949/ASP-NET-MVC-3-the-Razor-View-Engine-and-Google-Map -->
+    <script type="text/javascript">
+        function initialize() {
+            var latlng = new google.maps.LatLng(@Model.FirstOrDefault().Hlat, @Model.FirstOrDefault().Hlng);
+            var options = { zoom: 14, center: latlng,
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+            };
+            var map = new google.maps.Map(document.getElementById
+			    ("map_canvas"), options);
+
+            var marker = new google.maps.Marker({
+                position: latlng,
+               // title:"Hello World!"
+            });
+            // To add the marker to the map, call setMap();
+            marker.setMap(map);
+        }
+        $(function () {
+            initialize();
+        }); 
+    
+    </script> 
+}
+
+    
+
 	<div id="content">
     	<div class="container">
         	<div class="sixteen columns page-title">
+             <div id="map_canvas" class="map"></div>
             	<h3>@Html.DisplayFor(model => model.FirstOrDefault().Hname)</h3>
                 <div class="wrapper">   
                     
@@ -55,7 +90,20 @@
                         <input type="radio" name="radiobutton" id="star-4"/><label for="star-4" class="star"></label>
                         <input type="radio" name="radiobutton" id="star-5"/><label for="star-5" class="starred star"></label>        
                     }
+                    
+                 
                 </div>
+                
+                 
+               <p class="pDescripcion"> Dirección: @Model.FirstOrDefault().Haddress </p>
+                   
+                <h4> Descripción: @Model.FirstOrDefault().Hdescription </h4>
+                  
+               <p class="pDescripcion"> Servicios: @vbServices </p>
+                     
+                <h4>Rango de Precios por noche: @vbprice </h4>
+              
+                <h4>Rango de Capacidad por Habitación: @vbcapacity</h4>
         </div>
         </div>
 
@@ -119,7 +167,7 @@
                      }
 
                      /*Category2*/
-                     else if (item.HSidRoom == 1 && item.Stype == "R")
+                     else if (item.HSidRoom == 1)
                      {
 
                          if (!String.IsNullOrWhiteSpace(item.HScoverImage0))
@@ -149,7 +197,7 @@
                      }
 
                      /*Category3*/
-                     else if (item.HSidRoom == 2 && item.Stype == "R")
+                     else if (item.HSidRoom == 2)
                      {
                          if (!String.IsNullOrWhiteSpace(item.HScoverImage0))
                          {  
@@ -179,7 +227,7 @@
                      }
 
                      /*Category4*/
-                     else if (item.HSidRoom == 3 && item.Stype == "R")
+                     else if (item.HSidRoom == 3)
                      {
                          if (!String.IsNullOrWhiteSpace(item.HScoverImage0))
                          {  
