--- a/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
@@ -28,6 +28,7 @@
     <script src="../../Content/jQuery/jsTheme/script.js" type="text/javascript"></script>
 
       @RenderSection("section1", required: false)
+      @RenderSection("section2", required: false)
 
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -97,79 +98,8 @@
     
 </body>
 
+@{Html.RenderAction("getdiscount", "Home");}
 
-<footer>
-    	<div class="aside">
-        	<div class="container">
-                <!--<div class="spacer offcet-top">
-                    <div class="spacer spacer1">
-                        <div class="spacer spacer2"> -->
-                        	<div class="clearfix">
-                            	<div class="four columns">
-                                	<h3>Flickr photostream</h3>
-                                    <ul id="flickr">
-                                    </ul>
-                                </div>
-                                <div class="four columns">
-                                	<div id="twitter-ticker">
-                                        <div id="top-bar">
-                                        	<h3 class="tut">From Twitter</h3>
-                                        </div>
-                                        <div id="tweet-container"></div>
-                                    </div>
-                                </div>
-                        <!--        <div class="four columns">
-                                	<h3>Blogroll</h3>
-                                    <ul class="blogroll">
-                                    	<li><a href="#">On the other hand we denounce</a></li> 
-                                        <li><a href="#">Righteous indignation</a></li>  
-                                        <li><a href="#">Who are so beguiled and</a></li> 
-                                        <li><a href="#">By the charms of pleasure of the</a></li> 
-                                        <li><a href="#">Cannot foresee the pain</a></li>
-                                        <li><a href="#">Belongs to those who fail in their</a></li>  
-                                        <li><a href="#">Through weakness of will</a></li>
-                                        <li><a href="#">Same as saying through shrinking</a></li> 
-                                        <li><a href="#">These cases are perfectly</a></li> 
-                                        <li><a href="#">Simple and easy to distinguish</a></li>
-                                        <li><a href="#">Untrammelled and when nothing</a></li> 
-                                        <li><a href="#">Prevents our being able</a></li> 
-                                    </ul>
-                                </div>
-                                <div class="four columns">
-                                	<h3>About</h3>
-                                    On the other hand, we denounce with 
-                                    righteous indignation and dislike men 
-                                    who are so beguiled and demoralized 
-                                    by the charms of pleasure of the 
-                                    moment, so blinded by desire, that they 
-                                    cannot foresee the pain and trouble that 
-                                    are bound to ensue; and equal blame 
-                                    belongs to those who fail in their duty 
-                                    through weakness of will, which is the 
-                                    same as saying through shrinking from 
-                                    toil and pain. These cases are perfectly 
-                                    simple and easy to distinguish.In a free 
-                                    hour, when our power of choice is 
-                                    untrammelled and when nothing 
-                                    prevents our being able to do what we 
-                                </div>
-                            </div>
-                        </div>
-                    </div>-->
-            	</div>
-            </div>
-        </div>
-        <div class="footer-bottom">
-        	<div class="container">
-            	<div class="clearfix">
-                	<div class="sixteen columns">
-                        <div class="fright">
-                            Copyright &copy; 2012
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+
 
 </html>
