--- a/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
@@ -94,15 +94,12 @@
                  
                 </div>
                 
-                 
-               <p class="pDescripcion"> Dirección: @Model.FirstOrDefault().Haddress </p>
-                   
-                <h4> Descripción: @Model.FirstOrDefault().Hdescription </h4>
-                  
-               <p class="pDescripcion"> Servicios: @vbServices </p>
-                     
+               <br />  
+               <h4>Dirección: @Model.FirstOrDefault().Haddress </h4> 
+                <h4> Descripción: @Model.FirstOrDefault().Hdescription </h4>   
+              <!-- <p class="pDescripcion"> Servicios: @vbServices </p>  -->    
+                <h4> Servicios: @vbServices</h4>
                 <h4>Rango de Precios por noche: @vbprice </h4>
-              
                 <h4>Rango de Capacidad por Habitación: @vbcapacity</h4>
         </div>
         </div>
