--- a/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
@@ -10,12 +10,6 @@
 	<meta name="author" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <link href="../../Content/css/cssTheme/reset.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/style.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/layout.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/skeleton.css" rel="stylesheet" type="text/css" />
-    <link href="../../Content/css/cssTheme/prettyPhoto.css" rel="stylesheet" type="text/css" />
-
 	<script src="http://code.jquery.com/jquery-1.7.1.min.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/jsTheme/jquery.mobile.customized.min.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/jsTheme/jquery.easing.1.3.js" type="text/javascript"></script>
@@ -27,9 +21,15 @@
     <script src="../../Content/jQuery/jsTheme/jquery.prettyPhoto.js" type="text/javascript"></script>
     <script src="../../Content/jQuery/jsTheme/script.js" type="text/javascript"></script>
 
-      @RenderSection("section1", required: false)
-      @RenderSection("section2", required: false)
+    
+    <link href="../../Content/css/cssTheme/reset.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/style.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/layout.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/skeleton.css" rel="stylesheet" type="text/css" />
+    <link href="../../Content/css/cssTheme/prettyPhoto.css" rel="stylesheet" type="text/css" />
 
+
+    
 	<!--[if lt IE 9]>
 		<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
         <script src="js/respond.src.js"></script>
@@ -69,6 +69,11 @@
 
        });
    </script>
+
+     @RenderSection("section1", required: false)
+     @RenderSection("section2", required: false)
+     @RenderSection("section3", required: false)
+
 </head>
     <header>
     	<div class="container">
@@ -76,13 +81,13 @@
                 <div class="sixteen columns">
                     <div class="clearfix">
                     	<h1 id="site-title">
-                        	<a href="index.html">Danico</a>
+                        	<a href="@Url.Action("Search", "Home")">Danico</a>
                             <span>frase</span>
                         </h1>
                         <nav class="header">
                             <ul>
                                 <li class="current"><a href="@Url.Action("Search", "Home")"><span><span>Inicio</span></span></a></li>
-                                <li><a href="@Url.Action("Search", "Home")"><span><span>Acerca</span></span></a></li>
+                                <li><a href="@Url.Action("Index", "About")"><span><span>Acerca</span></span></a></li>
                             </ul>
                         </nav>
                     </div>
