--- a/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Hotel/Details.cshtml
@@ -101,13 +101,18 @@
                 <h4> Servicios: @vbServices</h4>
                 <h4>Rango de Precios por noche: @vbprice </h4>
                 <h4>Rango de Capacidad por Habitación: @vbcapacity</h4>
+                
         </div>
         </div>
 
         <div class="container">
+       
+
             <div class="clearfix">
-            
+             
                 <div class="sixteen columns">
+                    <button class="btnSearch" name="submit" type="submit">Solicitar Cotización</button>
+
                     <ul class="cat-list fright filter_list">
                           <li><a href="javascript: void(0)" rel="*">Todas</a></li>
                           <li><a href="javascript: void(0)" rel=".Category1">Zonas Comunes</a></li>
