--- a/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
+++ b/DanicoSolution/DanicoProject/Views/Shared/_Layout.cshtml
@@ -73,6 +73,7 @@
      @RenderSection("section1", required: false)
      @RenderSection("section2", required: false)
      @RenderSection("section3", required: false)
+     @RenderSection("section4", required: false)
 
 </head>
     <header>
